Fix close button overlap text issue
1. fix close button overlap text
2. adjust close button position when scrollbar appear inside textarea

--- a/src/app/components/formElements/TextArea/textarea.module.css
+++ b/src/app/components/formElements/TextArea/textarea.module.css
@@ -4,6 +4,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
   gap: 5px;
+  position: relative;
 }
 
 .input {
@@ -15,6 +16,7 @@
   padding: 10px 15px;
   resize: none;
   outline: none;
+  padding-right: 34px;
 }
 
 .input:focus {
@@ -32,5 +34,4 @@
   border: none;
   cursor: pointer;
   background-color: transparent;
-  transform: translateX(-20px) translateY(39px);
 }
